package Empleados_tareas;

public class Desarollador extends Empleados{

    @Override
    public void realizarTarea() {
        System.out.println("Escribiendo codigo y solucionando bugs");
    }
}
