package Empleados_tareas;

public class Disenyador extends Empleados {

    @Override
    public void realizarTarea() {
        System.out.println("Disenyando una pagina web para Fabian");
    }
}
