package Empleados_tareas;

public class Empleados {

    public void realizarTarea() {
        System.out.println("Empleado realizando una tarea generica");
    }
}
